// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: Error Responses > snapshots 400 Bad Request response structure 1`] = `
{
  "errorFields": {
    "hasCode": true,
    "hasMessage": true,
  },
  "hasError": true,
  "success": false,
}
`;

exports[`Snapshot: Error Responses > snapshots 401 Unauthorized response 1`] = `
{
  "contentType": "text/plain;charset=UTF-8",
  "hasBody": true,
  "status": 401,
}
`;

exports[`Snapshot: Error Responses > snapshots 404 Not Found response 1`] = `
{
  "bodyType": "string",
  "status": 404,
}
`;

exports[`Snapshot: Error Responses > snapshots CORS headers on error responses 1`] = `
{
  "access-control-allow-headers": "authorization,content-type,x-tenant-id",
  "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
  "access-control-allow-origin": null,
}
`;

exports[`Snapshot: Error Responses > snapshots OPTIONS preflight response 1`] = `
{
  "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
  "access-control-allow-origin": null,
  "access-control-max-age": "600",
  "status": 204,
}
`;
